[gd_scene load_steps=2 format=3 uid="uid://buo76rnivyc12"]

[ext_resource type="Script" path="res://Scenes/UI/start_menu.gd" id="1_5j4y2"]

[node name="StartMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5j4y2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="InfoLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Select Your Stage:"

[node name="StageList" type="ItemList" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Control" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="StartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[connection signal="item_selected" from="VBoxContainer/StageList" to="." method="_on_stage_list_item_selected"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
